--- a/src/pages/shared/Nav.css
+++ b/src/pages/shared/Nav.css
@@ -1,7 +1,7 @@
 .navbar.active {
     transition: 0.2s ease-in-out;
     box-shadow: 0 0 13px 3px hsl(0deg 0% 62% / 41%);
-    background-image: linear-gradient(to right, #4568dc, #b06ab3);
+    background-color: #db2d2d;
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
